infra/k8s/app1-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: borgo99/app1
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: app1-srv
spec:
  selector:
    app: app1
  ports:
    - name: app1
      protocol: TCP
      port: 8080
      targetPort: 8080
