infra/k8s/app2-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: borgo99/app2
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: app2-srv
spec:
  selector:
    app: app2
  ports:
    - name: app2
      protocol: TCP
      port: 8081
      targetPort: 8081
