infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: kafkatest.com
      http:
        paths:
          - path: /get-users
            pathType: Prefix
            backend:
              service:
                name: app2-srv
                port:
                  number: 8081

          - path: /create-user
            pathType: Prefix
            backend:
              service:
                name: app1-srv
                port:
                  number: 8080
